# doper-desktop-app

./: .gitignore  CMakeLists.txt  README.md  qml.qrc
aaa/: index.html
db/: chat.db
mainapp/backend4front/: README.md
mainapp/frontend4user/: README.md
qml/: TestItem.qml  index.html  main.qml
qml/app/: LoginItem.qml  MainItem.qml  MiniorItem.qml  MiniorMsgList.qml  MsgView.qml  PluginsView.qml  SystemTrayManager.qml  WebContainer.qml  hintInfoView.qml
qml/component/: ZAvatar.qml  ZButton.qml  ZCheckBox.qml  ZHeader.qml  ZHorizontalMenu.qml  ZIconButton.qml  ZList.qml  ZMsgList.qml  ZSimpleButton.qml  ZTextInput.qml  ZVerticalMenu.qml
qml/deeplink/: MainView.qml
src/: main.cpp
src/easylog/: easylogging++.h
src/graphql/: graphqlClient.cpp  graphqlClient.h  welcome.hpp
src/model/: ChatModel.cpp  ChatModel.h  ChatSqlQueryModel.cpp  ChatSqlQueryModel.h
src/plugin/: AppPluginManager.cpp  AppPluginManager.h  Plugin.cpp  Plugin.h
src/pluginInterface/: IAppPluginInterface.h  PluginMetaData.h
src/storage/: Global.cpp  Global.h
src/web/: WebDataComponent.cpp  WebDataComponent.h
toolbox/: README.md
